--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,9 +1,9 @@
-appname = myFirstProject
-httpport = 8090
+appname = anime_de
+httpport = 8057
 runmode = dev
 
 mysql_username = "root"
-mysql_password = "root@cpx"
+mysql_password = "123456"
 mysql_database = "shows"
 mysql_host = "127.0.0.1"
 mysql_port = 3306
