--- a/tests/tar_test/app.conf
+++ b/tests/tar_test/app.conf
@@ -4,7 +4,7 @@ runmode = dev
 
 mysql_username = root
 mysql_password = root@cpx
-mysql_database = shows
+mysql_database = es_shows
 mysql_host = 127.0.0.1
 mysql_port = 3306
 
